trunk/Archive2/eb/da44563f606052/output
main.cpp:9:29: error: constant expression evaluates to 129 which cannot be narrowed to type 'char' [-Wc++11-narrowing]
    const char c_x_arr[] = {0x81}; // error: constant expression evaluates to 129 which cannot be narrowed to type 'char' [-Wc++11-narrowing]
                            ^~~~
main.cpp:9:29: note: override this message by inserting an explicit cast
    const char c_x_arr[] = {0x81}; // error: constant expression evaluates to 129 which cannot be narrowed to type 'char' [-Wc++11-narrowing]
                            ^~~~
                            static_cast<char>( )
1 error generated.
